Adds changes and favicon

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -18,7 +18,8 @@
   line-height: 19px;
   display: block;
 
-  &:hover {
+  &:hover,
+  &:focus {
     transform: translateX(40px);
     transition: all .5s;
   }
