--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,12 +11,12 @@
   text-decoration: none;
   font-style: normal;
   font-weight: 700;
-
   display: flex;
   align-items: center;
   column-gap: 15px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     transform: translateX(40px);
     transition: all .5s;
   }
