--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -28,11 +28,18 @@
   color: $gray-10;
 }
 
-.hero__image {
-  height: auto;
+.hero__image-wrapper {
+  overflow: hidden;
   width: calc(100% + ((100vw - 100%) / 2));
 
   @include laptop {
     width: calc(100% + ((100vw - 17px - 100%) / 2));
   }
+}
+
+.hero__image {
+  width: 100%;
+  height: 90vh;
+  object-fit: cover;
+  display: block;
 }
