--- a/source/sass/blocks/project.scss
+++ b/source/sass/blocks/project.scss
@@ -1,5 +1,107 @@
+.project__container {
+  @include tablet {
+    padding: 0 15%;
+  }
+}
+
+.project__title {
+  font-size: 40px;
+  line-height: 140%;
+  font-weight: 700;
+  margin: 0 0 4vh;
+  display: block;
+
+  @include mobile-only {
+    font-size: 30px;
+  }
+}
+
+.project__subtitle {
+  font-size: 35px;
+  line-height: 130%;
+  font-weight: 700;
+  margin: 0 0 4vh;
+  display: block;
+
+  @include mobile-only {
+    font-size: 25px;
+  }
+}
+
 .project__description {
   font-size: 24px;
   line-height: 160%;
   margin: 0 0 4vh;
+}
+
+.project__text {
+  font-size: 18px;
+  line-height: 170%;
+  margin: 0 0 3vh;
+}
+
+.project__slider {
+  width: 100%;
+  max-width: 100%;
+  margin: 0 0 4vh;
+
+  @include tablet {
+    width: 21.5em;
+    max-width: 21.5em;
+    margin-left: -3.22em;
+  }
+}
+
+.project__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  max-height: 90vh;
+  object-fit: contain;
+  margin: 0 0 4vh;
+
+  @include tablet {
+    max-width: 21.5em;
+    margin-left: -3.22em;
+  }
+}
+
+.project__link {
+  font-size: 19px;
+  line-height: 19px;
+  color: $red-10;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+  margin: 0 0 2vh;
+
+  &:hover,
+  &:focus {
+    transform: translateX(40px);
+    transition: all .5s;
+  }
+
+  &::before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: $red-10;
+  }
+
+  &--github {
+    &::before {
+      mask-image: url("../../img/icons/stack.svg#github");
+    }
+  }
+
+  &--site {
+    &::before {
+      mask-image: url("../../img/icons/stack.svg#internet");
+    }
+  }
 }
