--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -19,6 +19,11 @@
   &--black {
     margin-bottom: 10px;
   }
+
+  span {
+    display: block;
+    @include float-up;
+  }
 }
 
 .hero__tagline {
@@ -26,6 +31,12 @@
   line-height: 180%;
   margin: 0 0 30vh;
   color: $gray-10;
+
+  span {
+    animation-delay: .2s;
+    display: block;
+    @include float-up;
+  }
 }
 
 .hero__image-wrapper {
@@ -38,6 +49,8 @@
 }
 
 .hero__image {
+  @include float-up;
+  animation-delay: .4s;
   width: 100%;
   height: 90vh;
   object-fit: cover;
