--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -47,6 +47,11 @@
   overflow: hidden;
   width: calc(100% + ((100vw - 100%) / 2));
 
+  @include mobile-only {
+    width: 100vw;
+    margin-left: calc((100vw - 100%) / -2);
+  }
+
   @include laptop {
     width: calc(100% + ((100vw - 17px - 100%) / 2));
   }
