--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,17 +1,20 @@
-.content__container {
-  @include tablet {
-    padding: 0 15%;
+.content {
+
+  &__container {
+    @include tablet {
+      padding: 0 15%;
+    }
   }
-}
 
-.content__title {
-  font-size: 40px;
-  line-height: 140%;
-  font-weight: 700;
-  margin: 0 0 4vh;
-  display: block;
+  &__title {
+    font-size: 40px;
+    line-height: 140%;
+    font-weight: 700;
+    margin: 0 0 4vh;
+    display: block;
 
-  @include mobile-only {
-    font-size: 30px;
+    @include mobile-only {
+      font-size: 30px;
+    }
   }
 }
