--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,67 +1,70 @@
-.hero__container {
-  margin-bottom: 24vh;
-}
+.hero {
 
-.hero__title {
-  font-size: 2.222em;
-  line-height: 140%;
-  font-weight: 700;
-  margin: 0;
-
-  @include mobile-only {
-    font-size: 2em;
+  &__container {
+    margin-bottom: 24vh;
   }
 
-  @include tablet {
-    letter-spacing: -3px;
+  &__title {
+    font-size: 2.222em;
+    line-height: 140%;
+    font-weight: 700;
+    margin: 0;
+
+    @include mobile-only {
+      font-size: 2em;
+    }
+
+    @include tablet {
+      letter-spacing: -3px;
+    }
+
+    &--black {
+      margin-bottom: 10px;
+    }
+
+    span {
+      display: block;
+      @include float-up;
+    }
+
+    &--margin-b {
+      margin: 0 0 20vh;
+    }
   }
 
-  &--black {
-    margin-bottom: 10px;
+  &__tagline {
+    font-size: 20px;
+    line-height: 180%;
+    margin: 0 0 30vh;
+    color: $gray-10;
+
+    span {
+      animation-delay: .2s;
+      display: block;
+      @include float-up;
+    }
   }
 
-  span {
-    display: block;
+  &__image-wrapper {
+    overflow: hidden;
+    width: calc(100% + ((100vw - 100%) / 2));
+
+    @include mobile-only {
+      width: 100vw;
+      margin-left: calc((100vw - 100%) / -2);
+    }
+
+    @include laptop {
+      width: calc(100% + ((100vw - 17px - 100%) / 2));
+    }
+  }
+
+  &__image {
     @include float-up;
-  }
-
-  &--margin-b {
-    margin: 0 0 20vh;
-  }
-}
-
-.hero__tagline {
-  font-size: 20px;
-  line-height: 180%;
-  margin: 0 0 30vh;
-  color: $gray-10;
-
-  span {
-    animation-delay: .2s;
+    animation-delay: .4s;
+    width: 100%;
+    height: 90vh;
+    object-fit: cover;
     display: block;
-    @include float-up;
   }
-}
-
-.hero__image-wrapper {
-  overflow: hidden;
-  width: calc(100% + ((100vw - 100%) / 2));
-
-  @include mobile-only {
-    width: 100vw;
-    margin-left: calc((100vw - 100%) / -2);
-  }
-
-  @include laptop {
-    width: calc(100% + ((100vw - 17px - 100%) / 2));
-  }
-}
-
-.hero__image {
-  @include float-up;
-  animation-delay: .4s;
-  width: 100%;
-  height: 90vh;
-  object-fit: cover;
-  display: block;
 }
