--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,20 +3,20 @@
   margin: 0;
   padding: 0;
   font-size: calc(1em + 1vw);
-}
 
-.page__body {
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: $basic-font;
-  font-weight: 400;
-  font-size: calc(1em + 1vw);
-  color: $white;
-  background-color: $black;
+  &__body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: $basic-font;
+    font-weight: 400;
+    font-size: calc(1em + 1vw);
+    color: $white;
+    background-color: $black;
 
-  &--white {
-    color: $black;
-    background-color: $white;
+    &--white {
+      color: $black;
+      background-color: $white;
+    }
   }
 }
