--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,5 +1,25 @@
 .about {
 
+  &__container {
+    margin-bottom: 10vh;
+
+    @include tablet {
+      padding: 0 15%;
+    }
+  }
+
+  &__title {
+    font-size: 40px;
+    line-height: 140%;
+    font-weight: 700;
+    margin: 0 0 4vh;
+    display: block;
+
+    @include mobile-only {
+      font-size: 30px;
+    }
+  }
+
   &__text {
     font-size: 18px;
     line-height: 170%;
@@ -9,7 +29,6 @@
       font-size: 24px;
       line-height: 160%;
       margin: 0 0 4vh;
-
     }
   }
 
