--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,11 +14,10 @@
 @import "blocks/major-hero.scss";
 @import "blocks/acquaintance.scss";
 @import "blocks/hero.scss";
-@import "blocks/content.scss";
 @import "blocks/navigation.scss";
 @import "blocks/about.scss";
 @import "blocks/projects.scss";
 @import "blocks/project.scss";
 @import "blocks/contacts.scss";
-@import "blocks/content.scss";
 @import "blocks/slider.scss";
+@import "blocks/skills.scss";
