Adds tiny changes

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,7 +5,7 @@
   font-size: calc(1em + 1vw);
 
   &__body {
-    min-height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: $basic-font;
