--- a/source/sass/blocks/major-hero.scss
+++ b/source/sass/blocks/major-hero.scss
@@ -1,13 +1,14 @@
 .major-hero {
   position: relative;
   overflow: hidden;
+  height: 100%;
 
   &::before {
     @include scale;
     content: "";
     position: absolute;
     z-index: -1;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     top: 0;
     left: 0;
@@ -39,13 +40,13 @@
   }
 
   &::after {
-    @include bounce;
+    @include zoom;
     content: "";
     position: absolute;
     z-index: 1;
     width: 50px;
     height: 50px;
-    bottom: 15%;
+    bottom: 5%;
     left: calc(50% - 25px);
 
     background-position: center;
@@ -60,7 +61,7 @@
 
   &__container {
     @include container;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
